<resources>
    <string name="app_name">ClientHTTP</string>
    <string name="profileInfo">Profile info</string>
    <string name="name_goes_here">Name goes here</string>

    <string name="reactions">Reactions</string>
    <string name="title_activity_stats_screen">StatsScreen</string>
    <string name="my_apointments">My apointments</string>

    <string name="this_is_the_logo">This is the logo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Strings related to persoanl details-->
    <string name="pacient_id">Pacient ID</string>
    <string name="log_in">Log in</string>
    <string name="pacientIdTitle">Pacient ID:</string>
    <string name="pacient_id_default">No ID assigned yet!</string>
    <string name="cnpTitle">CNP:</string>
    <string name="CNP_default">The persoanl numeric code is not set yet!</string>
    <string name="phoneNoTitle">Phone no.:</string>
    <string name="phoneNo_default">No phone number provided!</string>
    <string name="birthDate_default">Birth date not provided!</string>
    <string name="nameTitle">Name:</string>
    <string name="birthDateTitle">Birth date:</string>
    <string name="doctorTitle">Doctor:</string>
    <string name="doctorAddressTitle">Address:</string>
    <string name="doctorAddress_default">Unknown address for your doctor!</string>
    <!--Strings related to buttons-->
    <string name="send_btn">Send</string>
    <string name="treatment">View treatment</string>
    <string name="make_an_apointment">Make an apointment</string>
    <string name="continueBtn">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
